...
        android:text="@string/orText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/loginLeftRightMargin"
        android:layout_marginRight="@dimen/loginLeftRightMargin"
        android:layout_marginBottom="@dimen/loginLeftRightMargin"
        android:background="@color/colorPrimary"
...
